Blast Furnace improvements.
- Separated multiblock logic into a new class.
- Tuyere, Reinforcement State and Size are now stored in the multiblock class.
- Tuyere position and multiblock size are now saved to the block entity nbt.
- Cleaned up a few methods in the block entity.