@@ -56,16 +56,15 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     public int fuelConsumeTimer = 0;
     public float duration;
     public int timer = -1;
-    public BlockPos tuyerePos;
-    public BlastFurnaceHatchBlockEntity tuyereBE = null;
     public static final int STORAGE_SPACE = 64;
     public LerpedFloat coalCokeHeight = LerpedFloat.linear();
-    boolean isReinforced = false;
+    public final BlastFurnaceMultiblock multiblock;
 
 
     public BlastFurnaceOutputBlockEntity(BlockEntityType<?> type, BlockPos pos, BlockState state) {
         super(type, pos, state);
         setLazyTickRate(10);
+        multiblock = new BlastFurnaceMultiblock(this);
         inputInventory = new SmartInventory(1, this)
                 .forbidInsertion()
                 .forbidExtraction()
@@ -102,7 +101,7 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     }
 
     private void onFluidChanged(FluidStack stack) {
-        if (!hasLevel())
+        if (level == null)
             return;
         if (!level.isClientSide) {
             setChanged();
@@ -118,34 +117,26 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
 
     @Override
     public boolean addToGoggleTooltip(List<Component> tooltip, boolean isPlayerSneaking) {
-
         TFMGTexts.BlastFurnace.stats(inputInventory.getStackInSlot(0).getCount()).forGoggles(tooltip, 1);
-
-        TFMGTexts.BlastFurnace.height(getSize()).forGoggles(tooltip, 1);
+        TFMGTexts.BlastFurnace.height(multiblock.getSize()).forGoggles(tooltip, 1);
         TFMGTexts.BlastFurnace.fuelAmount(fuel).forGoggles(tooltip, 1);
-
         if (timer != -1)
             TFMGTexts.BlastFurnace.timer(timer).forGoggles(tooltip, 1);
-
-
-        if (isReinforced)
+        if (multiblock.isReinforced())
             TFMGTexts.BlastFurnace.reinforced().forGoggles(tooltip);
 
-        TFMGUtils.createFluidTooltip(this, tooltip);
-        TFMGUtils.createItemTooltip(this, tooltip);
-
-
+        TFMGUtils.createStorageTooltip(this, tooltip);
         return true;
     }
 
     public void executeRecipe() {
-
+        if (level == null)
+            return;
         RecipeWrapper inventoryIn = new RecipeWrapper(inputInventory);
         Optional<RecipeHolder<IndustrialBlastingRecipe>> optional = TFMGRecipeTypes.INDUSTRIAL_BLASTING.find(inventoryIn, level);
 
         if (optional.isEmpty())
             return;
-
         IndustrialBlastingRecipe recipe = optional.get().value();
         if (recipe.getIngredients().size() > 1)
             if (!(recipe.getIngredients().get(1).test(fluxInventory.getItem(0))))
@@ -155,19 +146,22 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
             return;
 
         int baseDuration = recipe.getProcessingDuration() * 20;
-        int heigth = getSize();
-        int maxHeigth = TFMGConfigs.common().machines.blastFurnaceMaxHeight.get();
+        int height = multiblock.getSize();
+        int maxHeight = TFMGConfigs.common().machines.blastFurnaceMaxHeight.get();
         double maxTimeModifier = TFMGConfigs.common().machines.blastFurnaceHeightSpeedModifier.get();
-        double timeModifier = maxHeigth / ((baseDuration / 2) * maxTimeModifier);
+        double timeModifier = maxHeight / (((double) baseDuration / 2) * maxTimeModifier);
 
-        timer = (int) (baseDuration - (heigth / timeModifier));
-        if (isReinforced)
+        timer = (int) (baseDuration - (height / timeModifier));
+        if (multiblock.isReinforced())
             timer /= 2;
     }
 
     @Override
     public void tick() {
         super.tick();
+
+        if (level == null)
+            return;
 
         if (level.isClientSide) {
             coalCokeHeight.chase(Math.min(fuel + inputInventory.getStackInSlot(0).getCount(), 24), 0.1f, LerpedFloat.Chaser.EXP);
@@ -176,7 +170,7 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
 
         if (inputInventory.isEmpty())
             return;
-        if (getSize() < 3)
+        if (multiblock.getSize() < 3)
             return;
 
         if (fuelConsumeTimer >= TFMGConfigs.common().machines.blastFurnaceFuelConsumption.get() && fuel > 0) {
@@ -197,43 +191,33 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
 
             if (timer == 0) {
                 if (canProcess(recipe)) {
-                    int itemsUsed = 1;
-                    int fluxUsed = 1;
-
                     if (!(primaryTank.getSpace() >= recipe.getPrimaryResult().getAmount()))
                         return;
                     if (recipe.getFluidResults().size() > 1)
                         if (!(secondaryTank.getSpace() >= recipe.getSecondaryResult().getAmount()))
                             return;
-
                     inputInventory.getItem(0).shrink(1);
                     if (recipe.getIngredients().size() > 1)
                         fluxInventory.getItem(0).shrink(recipe.getIngredients().size() - 1);
                     primaryTank.fill(recipe.getPrimaryResult(), IFluidHandler.FluidAction.EXECUTE);
                     if (recipe.getFluidResults().size() > 1)
                         secondaryTank.fill(recipe.getSecondaryResult(), IFluidHandler.FluidAction.EXECUTE);
-
                     timer = -1;
-
                     sendData();
                     setChanged();
                 }
             }
             if (timer > 0 && fuel > 0) {
-                if (recipe.hotAirUsage > 0 && (tuyerePos == null || !level.getBlockState(tuyerePos).is(TFMGBlocks.BLAST_FURNACE_HATCH.get()))) {
-                    tuyereBE = null;
+                if (recipe.hotAirUsage > 0 && multiblock.getTuyereBlockEntity() == null) {
                     return;
                 }
-                if (tuyereBE == null && tuyerePos != null)
-                    tuyereBE = (BlastFurnaceHatchBlockEntity) level.getBlockEntity(tuyerePos);
-                if (tuyereBE!=null)
-                    if (tuyereBE.tank.getFluidAmount() < recipe.hotAirUsage || !tuyereBE.tank.getFluid().getFluid().isSame(TFMGFluids.HOT_AIR.getSource()))
+                if (multiblock.getTuyereBlockEntity() != null) {
+                    if (multiblock.getTuyereBlockEntity().tank.getFluidAmount() < recipe.hotAirUsage || !multiblock.getTuyereBlockEntity().tank.getFluid().getFluid().isSame(TFMGFluids.HOT_AIR.getSource()))
                         return;
-                if (tuyereBE!=null) {
-                    tuyereBE.tank.getFluidInTank(0).setAmount(Math.max(tuyereBE.tank.getFluidInTank(0).getAmount() - recipe.hotAirUsage, 0));
+                    multiblock.getTuyereBlockEntity().tank.getFluidInTank(0).setAmount(Math.max(multiblock.getTuyereBlockEntity().tank.getFluidInTank(0).getAmount() - recipe.hotAirUsage, 0));
                 }
                 if (!recipe.getGasByproduct().isEmpty()) {
-                    if (level.getBlockEntity(getBlockPos().relative(getBlockState().getValue(FACING).getOpposite()).above(getSize())) instanceof BlastFurnaceHatchBlockEntity be) {
+                    if (level.getBlockEntity(getBlockPos().relative(getBlockState().getValue(FACING).getOpposite()).above(multiblock.getSize())) instanceof BlastFurnaceHatchBlockEntity be) {
                         be.tank.fill(recipe.getGasByproduct(), IFluidHandler.FluidAction.EXECUTE);
                     }
                 }
@@ -252,7 +236,9 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     }
 
     public void makeParticles() {
-        Random random = Create.RANDOM;
+        if (level == null)
+            return;
+        Random random = new Random();
         Direction direction = getBlockState().getValue(FACING).getOpposite();
         BlockPos pos = getBlockPos().above().relative(direction);
         int shouldSpawnSmoke = random.nextInt(7);
@@ -264,10 +250,9 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     private boolean canProcess(IndustrialBlastingRecipe recipe) {
         if (fuel == 0)
             return false;
-
-        if (!primaryTank.getFluid().isEmpty() && !primaryTank.getFluid().getFluid().isSame(recipe.getPrimaryResult().getFluid()))
+        if (!primaryTank.getFluid().getFluid().isSame(recipe.getPrimaryResult().getFluid()))
             return false;
-        if (!secondaryTank.getFluid().isEmpty() && !secondaryTank.getFluid().getFluid().isSame(recipe.getSecondaryResult().getFluid()))
+        if (!secondaryTank.getFluid().getFluid().isSame(recipe.getSecondaryResult().getFluid()))
             return false;
         return true;
     }
@@ -275,6 +260,7 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     @Override
     public void lazyTick() {
         super.lazyTick();
+        this.multiblock.evaluate();
         onContentsChanged();
         collectItems();
     }
@@ -285,7 +271,8 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     }
 
     public void hurtEntities() {
-
+        if (level == null)
+            return;
         List<LivingEntity> entities = level.getEntitiesOfClass(LivingEntity.class, new AABB(this.getBlockPos().relative(getBlockState().getValue(FACING).getOpposite()).above()));
 
         for (LivingEntity entity : entities) {
@@ -294,27 +281,23 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
                 if (entity.hurt(TFMGDamageSources.blastFurnace(level), 4.0F)) {
                     entity.playSound(SoundEvents.GENERIC_BURN, 0.4F, 2.0F + entity.getRandom().nextFloat() * 0.4F);
                 }
-
             }
         }
     }
 
     public void collectItems() {
-
+        if (level == null)
+            return;
         List<ItemEntity> items = level.getEntitiesOfClass(ItemEntity.class, new AABB(this.getBlockPos().relative(getBlockState().getValue(FACING).getOpposite()).above()));
-
         if (items.isEmpty())
             return;
 
-        ItemStack itemStack = items.get(0).getItem();
+        ItemStack itemStack = items.getFirst().getItem();
 
         for (int i = 0; i < 64; i++) {
-
             if (itemStack.isEmpty())
                 return;
-
             if (itemStack.is(TFMGTags.TFMGItemTags.BLAST_FURNACE_FUEL.tag) && fuel < STORAGE_SPACE) {
-
                 fuel++;
                 itemStack.shrink(1);
                 continue;
@@ -330,7 +313,6 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
                 if (inputInventory.isEmpty() || inputInventory.getItem(0).is(itemStack.getItem())) {
                     inputInventory.setItem(0, new ItemStack(itemStack.getItem(), inputInventory.getItem(0).getCount() + 1));
                     itemStack.shrink(1);
-                    continue;
                 }
             }
         }
@@ -339,7 +321,7 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     @Override
     protected void read(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
         super.read(compound,registries , clientPacket);
-        isReinforced = compound.getBoolean("IsReinforce");
+        multiblock.read(compound, "MultiblockData", registries, clientPacket);
         inputInventory.deserializeNBT(registries,compound.getCompound("InputItems"));
         fluxInventory.deserializeNBT(registries,compound.getCompound("Flux"));
         timer = compound.getInt("Timer");
@@ -352,7 +334,7 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
     @Override
     public void write(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
         super.write(compound,registries , clientPacket);
-        compound.putBoolean("IsReinforce", isReinforced);
+        compound.put("MultiblockData", multiblock.write(registries, clientPacket));
         compound.put("InputItems", inputInventory.serializeNBT(registries));
         compound.put("Flux", fluxInventory.serializeNBT(registries));
         compound.putInt("Timer", timer);
@@ -367,100 +349,5 @@ public class BlastFurnaceOutputBlockEntity extends SmartBlockEntity implements I
         super.destroy();
         ItemHelper.dropContents(level, worldPosition, inputInventory);
         ItemHelper.dropContents(level, worldPosition, fluxInventory);
-    }
-
-    public int getSize() {
-
-        BlockPos middlePos = getBlockPos().relative(getBlockState().getValue(FACING).getOpposite());
-
-        tuyerePos = null;
-
-        if ((isValidWall(middlePos) == FurnaceBlockType.NONE))
-            return 0;
-
-        int size = 0;
-
-        int normalAmount = 0;
-        int reinforcedAmount = 0;
-
-        for (int i = 0; i < TFMGConfigs.common().machines.blastFurnaceMaxHeight.get(); i++) {
-
-            BlockPos checkedPos = middlePos.above(i).east().south();
-
-            for (int j = 0; j < 3; j++) {
-                for (int y = 0; y < 3; y++) {
-                    FurnaceBlockType wall = isValidWall(checkedPos);
-                    FurnaceBlockType support = isValidSupport(checkedPos);
-                    if (checkedPos.getX() == middlePos.getX() ^ checkedPos.getZ() == middlePos.getZ()) {
-                        if (!(i == 0 && level.getBlockState(checkedPos).is(TFMGBlocks.BLAST_FURNACE_OUTPUT.get()))) {
-                            if (wall == FurnaceBlockType.NONE) {
-                                isReinforced = normalAmount == 0 && reinforcedAmount > 0;
-                                return size;
-                            } else {
-                                if (wall == FurnaceBlockType.REGULAR) {
-                                    normalAmount++;
-                                } else reinforcedAmount++;
-                            }
-                        }
-                    } else if (checkedPos.getX() == middlePos.getX() && checkedPos.getZ() == middlePos.getZ()) {
-                        if (!level.getBlockState(checkedPos).isAir() && i != 0) {
-                            isReinforced = normalAmount == 0 && reinforcedAmount > 0;
-
-                            return size;
-                        }
-                    } else if (support == FurnaceBlockType.NONE) {
-                        isReinforced = normalAmount == 0 && reinforcedAmount > 0;
-                        return size;
-                    } else {
-                        if (support == FurnaceBlockType.REGULAR) {
-                            normalAmount++;
-                        } else reinforcedAmount++;
-                    }
-
-                    checkedPos = checkedPos.west();
-                }
-                checkedPos = checkedPos.north();
-                checkedPos = checkedPos.east(3);
-            }
-            size++;
-        }
-        return size;
-    }
-
-    public FurnaceBlockType isValidWall(BlockPos pos) {
-
-        BlockState state = level.getBlockState(pos);
-
-        if (state.is(TFMGBlocks.BLAST_FURNACE_HATCH.get())) {
-            if (tuyerePos != null)
-                return FurnaceBlockType.NONE;
-            tuyerePos = pos;
-        }
-
-        if (state.is(TFMGTags.TFMGBlockTags.REINFORCED_BLAST_FURNACE_WALL.tag))
-            return FurnaceBlockType.REINFORCED;
-        if (state.is(TFMGTags.TFMGBlockTags.BLAST_FURNACE_WALL.tag))
-            return FurnaceBlockType.REGULAR;
-        return FurnaceBlockType.NONE;
-    }
-
-    public FurnaceBlockType isValidSupport(BlockPos pos) {
-
-        BlockState state = level.getBlockState(pos);
-
-        if (state.is(TFMGTags.TFMGBlockTags.REINFORCED_BLAST_FURNACE_SUPPORT.tag))
-            return FurnaceBlockType.REINFORCED;
-        if (state.is(TFMGTags.TFMGBlockTags.BLAST_FURNACE_SUPPORT.tag))
-            return FurnaceBlockType.REGULAR;
-        return FurnaceBlockType.NONE;
-    }
-
-
-
-    enum FurnaceBlockType {
-        NONE,
-        REGULAR,
-        REINFORCED
-
     }
 }
